# smart_gate

./: .env.example  .gitignore  main.py  pyproject.toml
src/: config.py  detector.py  sources.py
tests/: test_license_validator.py
