[project]
name = "smart-gate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "dotenv>=0.9.9",
    "fast-plate-ocr[onnx]>=1.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "torch>=2.12.0",
    "ultralytics>=8.4.51",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torchvision = { index = "pytorch-gpu" }
